1st cut interactive
need to finish network

--- a/src/makefile
+++ b/src/makefile
@@ -1,13 +1,43 @@
-# kbuild trick to avoid linker error. Can be omitted if a module is built.
-obj- := dummy.o
 
-# List of programs to build
-hostprogs-y := hid-example
+TARGET	= usb-relay
 
-# Tell kbuild to always build the programs
-always := $(hostprogs-y)
+all: $(TARGET)
 
-HOSTCFLAGS_hid-example.o += -I$(objtree)/usr/include
+# Which compiler
+CC = gcc
 
-all: hid-example
+# Where are include files kept
+INCLUDE =
+
+# Use this for Linux client software
+CDEFINE = -DLINUX -DI386 -D_GNU_SOURCE -DBACKTRACE_SYMBOLS
+
+
+# Options for development
+CFLAGS		= $(INCLUDE) $(CDEFINE) -g -Wall -Os $(INCLUDE)
+LDFLAGS		= 
+LINKFLAGS	= -o 
+
+LIBS            = 
+LIBS_INC        = 
+
+# Options for release
+# CFLAGS = -O -Wall -ansi
+
+#Dependancies for all
+DEPENDALL	= mytypes.h yselect.h net.h webio.h yselect.h usb-relay.h daemonize.h
+
+#Objects
+OBJ	= usb-relay.c net.c webio.c arch.c log.c daemonize.c
+OBJ    += yselect.c
+
+$(TARGET): $(OBJ) 
+	$(CC) $(CFLAGS) $(LINKFLAGS) $(TARGET) $(OBJ) $(LIBS)
+	cp $(TARGET) .. 
+
+clean:
+	-rm *.o $(MYLIB)
+	 rm -f *.map
+	 rm -f $(TARGET)
+
 
