big math for unlimited bitmask

--- a/win32/SainSmartUsbRelay.vcxproj
+++ b/win32/SainSmartUsbRelay.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="..\src\net.c" />
     <ClCompile Include="..\src\usb-relay.c" />
     <ClCompile Include="..\src\webio.c" />
+    <ClCompile Include="..\src\wingetopt.c" />
     <ClCompile Include="..\src\yselect.c" />
   </ItemGroup>
   <ItemGroup>
@@ -32,6 +33,7 @@
     <ClInclude Include="..\src\net.h" />
     <ClInclude Include="..\src\usb-relay.h" />
     <ClInclude Include="..\src\webio.h" />
+    <ClInclude Include="..\src\wingetopt.h" />
     <ClInclude Include="..\src\yselect.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -84,12 +86,12 @@
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Release\</AssemblerListingLocation>
-      <PrecompiledHeaderOutputFile>.\Release\ffdb.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Release\SainSmartUsbRelay.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
       <ProgramDataBaseFileName>.\Release\</ProgramDataBaseFileName>
     </ClCompile>
     <Midl>
-      <TypeLibraryName>.\Release\ffdb.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Release\SainSmartUsbRelay.tlb</TypeLibraryName>
     </Midl>
     <ResourceCompile>
       <Culture>0x0409</Culture>
@@ -97,12 +99,12 @@
     </ResourceCompile>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release\ffdb.bsc</OutputFile>
+      <OutputFile>.\Release\SainSmartUsbRelay.bsc</OutputFile>
     </Bscmake>
     <Link>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Console</SubSystem>
-      <OutputFile>.\Release\ffdb.exe</OutputFile>
+      <OutputFile>.\Release\SainSmartUsbRelay.exe</OutputFile>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -118,13 +120,13 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Debug\</AssemblerListingLocation>
-      <PrecompiledHeaderOutputFile>.\Debug\ffdb.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Debug\SainSmartUsbRelay.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Debug\</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug\</ProgramDataBaseFileName>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
     </ClCompile>
     <Midl>
-      <TypeLibraryName>.\Debug\ffdb.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Debug\SainSmartUsbRelay.tlb</TypeLibraryName>
     </Midl>
     <ResourceCompile>
       <Culture>0x0409</Culture>
@@ -132,14 +134,14 @@
     </ResourceCompile>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug\ffdb.bsc</OutputFile>
+      <OutputFile>.\Debug\SainSmartUsbRelay.bsc</OutputFile>
     </Bscmake>
     <Link>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <OutputFile>.\Debug\ffdb.exe</OutputFile>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>.\Debug\SainSmartUsbRelay.exe</OutputFile>
+      <AdditionalDependencies>ws2_32.lib;iphlpapi.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
