--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-
+*.o
+usb-relay
+~*
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
