--- a/console2udp/win32/udpsend.vcxproj.filters
+++ b/console2udp/win32/udpsend.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="..\src\webio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\yselect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\telnet_udp.c">
@@ -50,6 +53,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\webio.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\yselect.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
