Fix remaining bugs in console2udp, monitor.sh, and docs
CRITICAL: C6 printf %s with int (segfault), C7 uninitialized buffer size
HIGH: H9 NULL deref on strtok_r, H10 sizeof(macro) instead of macro,
H11 memset before NULL check, H12 inverted strcmp logic,
H13 unbounded sprintf/strcat overflow in curl_get
MEDIUM: M10 hold time U32 underflow guard, M11 sizeof(CMD_MAX_SIZE)=4,
M12 operator precedence in while loop, M13 inverted timeout loop,
M14 missing break on non-SSL success, M15-M16 shell quoting and PID race,
M17-M18 README contradictions and wrong flag, M20 undefined $(MYLIB)
LOW: L3 parameter shadows function name, L6 DEPENDALL fixes
Also: parenthesized WEB_RESP_HEADER_LEN macro in net.h

--- a/src/makefile
+++ b/src/makefile
@@ -25,7 +25,7 @@ LIBS_INC        =
 # CFLAGS = -O -Wall -ansi
 
 #Dependancies for all
-DEPENDALL	= mytypes.h yselect.h net.h webio.h yselect.h usb-relay.h daemonize.h
+DEPENDALL	= mytypes.h config.h arch.h net.h webio.h yselect.h usb-relay.h daemonize.h log.h debug.h
 
 #Objects
 OBJ	= usb-relay.o net.o webio.o arch.o log.o daemonize.o
@@ -36,7 +36,7 @@ $(TARGET): $(OBJ)
 	cp $(TARGET) .. 
 
 clean:
-	-rm *.o $(MYLIB)
+	-rm *.o
 	 rm -f *.map
 	 rm -f $(TARGET)
 
