Fix remaining low-priority issues and clean up README
L4: ysleep_usec Windows divisor /100 -> /1000 (was 10x too long)
M19: Wire up DEPENDALL as prerequisite so header changes trigger rebuild
H14: Document SSL_VERIFY_NONE as intentional for embedded targets
L8: Fix ~17 spelling errors throughout README
Mark all TODO items resolved

--- a/src/makefile
+++ b/src/makefile
@@ -31,7 +31,9 @@ DEPENDALL	= mytypes.h config.h arch.h net.h webio.h yselect.h usb-relay.h daemon
 OBJ	= usb-relay.o net.o webio.o arch.o log.o daemonize.o
 OBJ    += yselect.o
 
-$(TARGET): $(OBJ) 
+$(OBJ): $(DEPENDALL)
+
+$(TARGET): $(OBJ)
 	$(CC) $(CFLAGS) $(LINKFLAGS) $(TARGET) $(OBJ) $(LIBS)
 	cp $(TARGET) .. 
 
